language/move-lang/tests/move_check/typing/constraints_not_satisfied_all_cases.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:7:29 ───
   │
 7 │     fun no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                             ^^^^^^^ 'copy' constraint not satisifed
   ·
 7 │     fun no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                                  - The type 'T' does not have the ability 'copy'
   ·
 7 │     fun no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                       - To satisify the constraint, the 'copy' ability would need to be added here
   ·
 3 │     struct CupC<T: copy> {}
   │                    ---- 'copy' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:7:41 ───
   │
 7 │     fun no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                                         ^^^^^^^ 'key' constraint not satisifed
   ·
 7 │     fun no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                                              - The type 'T' does not have the ability 'key'
   ·
 7 │     fun no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                       - To satisify the constraint, the 'key' ability would need to be added here
   ·
 2 │     struct CupR<T: key> {}
   │                    --- 'key' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:9:31 ───
   │
 9 │     fun t_resource<T: key>(c: CupC<T>, r: CupR<T>) {}
   │                               ^^^^^^^ 'copy' constraint not satisifed
   ·
 9 │     fun t_resource<T: key>(c: CupC<T>, r: CupR<T>) {}
   │                                    - The type 'T' does not have the ability 'copy'
   ·
 9 │     fun t_resource<T: key>(c: CupC<T>, r: CupR<T>) {}
   │                    - To satisify the constraint, the 'copy' ability would need to be added here
   ·
 3 │     struct CupC<T: copy> {}
   │                    ---- 'copy' constraint declared here
   │

error: 

    ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:11:44 ───
    │
 11 │     fun t_copyable<T: copy>(c: CupC<T>, r: CupR<T>) {}
    │                                            ^^^^^^^ 'key' constraint not satisifed
    ·
 11 │     fun t_copyable<T: copy>(c: CupC<T>, r: CupR<T>) {}
    │                                                 - The type 'T' does not have the ability 'key'
    ·
 11 │     fun t_copyable<T: copy>(c: CupC<T>, r: CupR<T>) {}
    │                    - To satisify the constraint, the 'key' ability would need to be added here
    ·
  2 │     struct CupR<T: key> {}
    │                    --- 'key' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:13:14 ───
    │
 13 │     fun r(c: CupC<R>, r: CupR<R>) {}
    │              ^^^^^^^ 'copy' constraint not satisifed
    ·
 13 │     fun r(c: CupC<R>, r: CupR<R>) {}
    │                   - The type '0x8675309::M::R' does not have the ability 'copy'
    ·
  4 │     struct R has key {}
    │            - To satisify the constraint, the 'copy' ability would need to be added here
    ·
  3 │     struct CupC<T: copy> {}
    │                    ---- 'copy' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:15:26 ───
    │
 15 │     fun c(c: CupC<C>, r: CupR<C>) {}
    │                          ^^^^^^^ 'key' constraint not satisifed
    ·
 15 │     fun c(c: CupC<C>, r: CupR<C>) {}
    │                               - The type '0x8675309::M::C' does not have the ability 'key'
    ·
  5 │     struct C has copy {}
    │            - To satisify the constraint, the 'key' ability would need to be added here
    ·
  2 │     struct CupR<T: key> {}
    │                    --- 'key' constraint declared here
    │

